[package]
name = "hanzo-agentic"
version = "1.1.21"
edition = "2021"
description = "Hanzo Network — agentic network integration with post-quantum privacy"
license = "MIT"
repository = "https://github.com/hanzonet/agentic"

[lib]
name = "hanzo_agentic"
path = "src/network.rs"

[dependencies]
bincode = "1.3"
pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
aes-gcm = "0.10"
rand = "0.8"
[dependencies.chrono]
version = "0.4"
features = ["serde"]
[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.0"
features = ["full"]